# liryna

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  enventory for servival.docx  opening scene.docx
.github/workflows/: ci.yml
docs/: survival_inventory.md
include/: audio_backend.h  audio_navigation.h  dog.h  engine.h  inventory.h  music_player.h  opening_scene.h  settings.h  speech.h  structure_browser.h  structure_builder.h  tile_categories.h  tile_distance.h  water_biome_audio.h
src/: engine.c  inventory.c  main.c  music_player.c  settings.c  speech.cpp  structure_browser.c  structure_builder.c  tile_categories.c  tile_distance.c
src/audio/: audio_backend.c  audio_navigation.c  opening_scene.c  water_biome_audio.c
src/ui/: menu_ui.c  menu_ui.h  ui.c  ui.h  ui_internal.h
src/ui/screens/: creative_inventory.c  help.c  main_menu.c  new_world.c  saved_worlds.c  screen_registry.c  screen_registry.h  settings.c  structure_browser.c  structure_save.c  survival_inventory.c  ui_test.c
src/world/: World Generation Rules and Workflow.docx  biom types and names.txt  biome_tile_sets.c  biome_tile_sets.h  dog.c  structure_generation.c  structure_generation.h  tile_definition_table_filled.docx  tiles.c  tiles.h  world.c  world.h  world_generation.c  world_generation.h
tests/: inventory_test.c
